# microservice

index/: Cargo.toml  Rocket.toml.example
index/src/: main.rs
libs/service_core/: Cargo.toml
libs/service_core/src/: lib.rs
libs/service_core_derive/: Cargo.toml
libs/service_core_derive/src/: lib.rs
user/: Cargo.toml
user/src/: main.rs
