[package]
name = "index"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = "1.0.33"

[dependencies.semver]
version = "0.9.0"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool", "json"]
